--- a/blockchain.topmonks.com/src/html/index.njk
+++ b/blockchain.topmonks.com/src/html/index.njk
@@ -288,105 +288,81 @@
             <h2>Sharing our knowledge</h2>
           </div>
 
-          <div class="blog__box mdc-layout-grid__cell">
-            <a href="https://btctip.cz/makerdao-vyhody-nevyhody-a-budoucnost-projektu/"
-               class="mdc-layout-grid__cell--span-12">
-              <article class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-                  <img width="100%" alt="Photo for the article" loading="lazy"
-                       src="{{ "blockchain.topmonks.com/article-img01.png" | cloudinaryUrl(width=480) }}"
-                  >
+          <article class="blog__box mdc-layout-grid__cell">
+              <a title="Read article MakerDAO"
+                href="https://btctip.cz/makerdao-vyhody-nevyhody-a-budoucnost-projektu/">
+                <img width="100%" alt="MakerDAO" loading="lazy"
+                     src="{{ "blockchain.topmonks.com/article-img01.png" | cloudinaryUrl(width=480) }}">
+              </a>
+              <div class="blog__box-body">
+                <span class="published-date">NOVEMBER 14TH 2019</span>
+                <h3>MakerDAO&nbsp;&ndash; výhody, nevýhody a budoucnost projektu</h3>
+                <div class="personal__id">
+                  <img class="person__photo" loading="lazy"
+                       src="{{ "avatar/josef-tetek.jpg" | cloudinaryUrl(width=32) }}"
+                       alt="[photo] Josef Tětek" width="32"
+                       height="32">
+                  <span class="name">Josef Tětek</span>
                 </div>
-                <div class="blog__box-body mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-                  <span class="published-date">NOVEMBER 14TH 2019</span>
-                  <h3>MakerDAO&nbsp;&ndash; výhody, nevýhody a budoucnost projektu</h3>
-                  <div
-                    class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-                    <img class="person__photo" loading="lazy"
-                         src="{{ "avatar/josef-tetek.jpg" | cloudinaryUrl(width=32) }}"
-                         alt="[photo] Josef Tětek" width="32"
-                         height="32">
-                    <span class="name">Josef Tětek</span>
-                  </div>
-                  <div
-                    class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-                    <a href="https://btctip.cz/makerdao-vyhody-nevyhody-a-budoucnost-projektu/">Show
-                      article</a>
-                  </div>
-                </div>
-              </article>
-            </a>
-          </div>
-
-
-          <div class="blog__box mdc-layout-grid__cell">
-            <a href="https://hackernoon.com/ai-is-a-distraction-interview-with-harry-halpin-ceo-of-nym-e1433x3v"
-               class="mdc-layout-grid__cell--span-12">
-              <div class="mdc-layout-grid__inner">
-
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-                  <img width="100%" alt="Photo for an article" loading="lazy"
-                       src="{{ "blockchain.topmonks.com/article-img02.png" | cloudinaryUrl(width=480) }}">
-                </div>
-                <div class="blog__box-body mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-                  <span class="published-date">NOVEMBER 11TH 2019</span>
-                  <h3>"AI is a Distraction" — Interview with Harry Halpin; CEO of NYM</h3>
-                  <div
-                    class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-                    <img class="person__photo" loading="lazy"
-                         src="{{ "avatar/josef-tetek.jpg" | cloudinaryUrl(width=32) }}"
-                         alt="[photo] Josef Tětek" width="32"
-                         height="32">
-                    <span class="name">Josef Tětek</span>
-                  </div>
-                  <div
-                    class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-                    <a href="https://hackernoon.com/ai-is-a-distraction-interview-with-harry-halpin-ceo-of-nym-e1433x3v">Show
-                      article</a>
-                  </div>
+                <div class="article-link">
+                  <a href="https://btctip.cz/makerdao-vyhody-nevyhody-a-budoucnost-projektu/">Show
+                    article</a>
                 </div>
               </div>
+          </article>
+
+          <article class="blog__box mdc-layout-grid__cell">
+            <a title="Read article AI is a Distraction"
+              href="https://hackernoon.com/ai-is-a-distraction-interview-with-harry-halpin-ceo-of-nym-e1433x3v">
+              <img width="100%" alt="AI is a Distraction" loading="lazy"
+                   src="{{ "blockchain.topmonks.com/article-img02.png" | cloudinaryUrl(width=480) }}">
             </a>
-          </div>
-
-
-          <div class="blog__box mdc-layout-grid__cell">
-            <a href="https://btctip.cz/makerdao-a-dai-urok-jako-zly-sluha-i-spatny-pan/"
-               class="mdc-layout-grid__cell--span-12">
-              <div class="mdc-layout-grid__inner">
-
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-                  <img width="100%" alt="Photo for an article" loading="lazy"
-                       src="{{ "blockchain.topmonks.com/article-img03.png" | cloudinaryUrl(width=480) }}">
-                </div>
-                <div class="blog__box-body mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-                  <span class="published-date">NOVEMBER 7TH 2019</span>
-                  <h3>MakerDAO a DAI – úrok jako zlý sluha i špatný pán</h3>
-                  <div
-                    class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-                    <img class="person__photo" loading="lazy"
-                         src="{{ "avatar/josef-tetek.jpg" | cloudinaryUrl(width=32) }}"
-                         alt="[photo] Josef Tětek" width="32"
-                         height="32">
-                    <span class="name">Josef Tětek</span>
-                  </div>
-                  <div
-                    class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-                    <a href="https://btctip.cz/makerdao-a-dai-urok-jako-zly-sluha-i-spatny-pan/">Show
-                      article</a>
-                  </div>
-                </div>
+            <div class="blog__box-body">
+              <span class="published-date">NOVEMBER 11TH 2019</span>
+              <h3>"AI is a Distraction" — Interview with Harry Halpin; CEO of NYM</h3>
+              <div class="personal__id">
+                <img class="person__photo" loading="lazy"
+                     src="{{ "avatar/josef-tetek.jpg" | cloudinaryUrl(width=32) }}"
+                     alt="[photo] Josef Tětek" width="32"
+                     height="32">
+                <span class="name">Josef Tětek</span>
               </div>
+              <div class="article-link">
+                <a href="https://hackernoon.com/ai-is-a-distraction-interview-with-harry-halpin-ceo-of-nym-e1433x3v">Show
+                  article</a>
+              </div>
+            </div>
+          </article>
+
+          <article class="blog__box mdc-layout-grid__cell">
+            <a title="Read article MakerDAO a DAI"
+              href="https://btctip.cz/makerdao-a-dai-urok-jako-zly-sluha-i-spatny-pan/">
+              <img width="100%" alt="MakerDAO a DAI" loading="lazy"
+                   src="{{ "blockchain.topmonks.com/article-img03.png" | cloudinaryUrl(width=480) }}">
             </a>
-          </div>
+            <div class="blog__box-body">
+              <span class="published-date">NOVEMBER 7TH 2019</span>
+              <h3>MakerDAO a DAI – úrok jako zlý sluha i špatný pán</h3>
+              <div class="personal__id">
+                <img class="person__photo" loading="lazy"
+                     src="{{ "avatar/josef-tetek.jpg" | cloudinaryUrl(width=32) }}"
+                     alt="[photo] Josef Tětek" width="32"
+                     height="32">
+                <span class="name">Josef Tětek</span>
+              </div>
+              <div class="article-link">
+                <a href="https://btctip.cz/makerdao-a-dai-urok-jako-zly-sluha-i-spatny-pan/">Show
+                  article</a>
+              </div>
+            </div>
+          </article>
 
-
-          <div class="display-none mdc-layout-grid__cell">
+          <div class="mdc-layout-grid__cell">
           </div>
           <div class="button mdc-layout-grid__cell">
-            <a title="Hire our dTeam Button" class="btn" href="/blog/">Show more articles</a>
+            <a class="btn" href="/blog/">Show more articles</a>
           </div>
-          <div class="display-none mdc-layout-grid__cell">
+          <div class="mdc-layout-grid__cell">
           </div>
         </div>
       </div>
@@ -408,6 +384,7 @@
                title="Lea Petrášová on LinkedIn">
               <svg width="35px" height="35px" viewBox="0 0 35 35" version="1.1" xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink">
+                <title>LinkedIn</title>
                 <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                   <g transform="translate(-383.000000, -4098.000000)" fill="#1C1C37">
                     <g transform="translate(0.000000, 3772.000000)">
