--- a/blockchain.topmonks.com/src/stylesheets/blog.scss
+++ b/blockchain.topmonks.com/src/stylesheets/blog.scss
@@ -80,10 +80,11 @@ body {
 
   .blog__box-body {
     padding: 8px 14px 20px;
+    margin-top: 24px;
   }
 
   &:hover {
-    box-shadow: 0px 2px 23px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 23px rgba(0, 0, 0, 0.1);
   }
 }
 
