--- a/blockchain.topmonks.com/src/html/index.njk
+++ b/blockchain.topmonks.com/src/html/index.njk
@@ -7,9 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width,Save-Data">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <link rel="preconnect" href="//fonts.googleapis.com">
-  <link rel="preconnect" href="//www.googletagmanager.com">
-  <link rel="preconnect" href="//static.hotjar.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://www.googletagmanager.com">
+  <link rel="preconnect" href="https://www.google-analytics.com" crossorigin>
+  <link rel="preconnect" href="https://www.google.com" crossorigin>
+  <link rel="preconnect" href="https://stats.g.doubleclick.net" crossorigin>
+  <link rel="preconnect" href="https://static.hotjar.com" crossorigin>
   <link rel="preload" as="script" href="https://www.googletagmanager.com/gtm.js?id=GTM-T4KMQ2F">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,700&amp;display=swap">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
