[www.topmonks.cz] Fix sprite helper with title element

--- a/www.topmonks.cz/src/html/layouts/topmonks.njk
+++ b/www.topmonks.cz/src/html/layouts/topmonks.njk
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="//www.google.com" crossorigin>
   <link rel="preconnect" href="//www.google.cz" crossorigin>
   <link rel="preconnect" href="//stats.g.doubleclick.net" crossorigin>
-  <link rel="preconnect" href="//static.hotjar.com">
+  <link rel="preconnect" href="//static.hotjar.com" crossorigin>
   <link rel="preload" as="script" href="https://www.googletagmanager.com/gtm.js?id=GTM-WW7T986">
 
   <!--[if lt IE 9]>
