[studio.topmonks.com] Fixed alternate text for logo

--- a/studio.topmonks.com/src/html/shared/header.njk
+++ b/studio.topmonks.com/src/html/shared/header.njk
@@ -13,9 +13,9 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-phone">
       </div>
       <div class="topmonks-icon mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet">
-        <a
-          class="tm-logo" href="/" title="Go to homepage">
+        <a class="tm-logo" href="/" title="Go to homepage">
           <svg class="monk" width="158" height="35" viewBox="0 0 158 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <title>TopMonks Startup Studio</title>
             <path d="M15.7851 4.65283C16.1351 4.65283 16.4101 4.92948 16.4101 5.28158C16.4101 5.63367 16.1351 5.91032 15.7851 5.91032C15.4351 5.91032 15.1602 5.63367 15.1602 5.28158C15.1602 4.92948 15.4351 4.65283 15.7851 4.65283Z" />
             <path d="M15.9604 2.89233C16.3104 2.89233 16.5854 3.16898 16.5854 3.52108C16.5854 3.87318 16.3104 4.14982 15.9604 4.14982C15.6104 4.14982 15.3354 3.87318 15.3354 3.52108C15.3354 3.16898 15.6104 2.89233 15.9604 2.89233Z" />
             <path d="M19.1351 11.0911C17.9851 11.5941 16.8602 11.5941 15.7853 11.0911C15.7603 12.8013 19.1351 12.8013 19.1351 11.0911Z"/>
