--- a/www.hlidacshopu.cz/src/html/proc-to-delame/index.njk
+++ b/www.hlidacshopu.cz/src/html/proc-to-delame/index.njk
@@ -1,4 +1,4 @@
-{% extends 'layouts/master.html' %}
+{% extends 'layouts/master.njk' %}
 {% block title %}Proč děláme Hlídač shopů{% endblock %}
 
 {% block styles %}
